@@ -1,6 +1,7 @@
 Version 2.7.0
 ~~~~~~~~~~~~~
 * Post DiFX-2.6
+* vexpeek: add some new options for combining kinds of output
 
 Version 2.6.0
 ~~~~~~~~~~~~~
